<resources>
    <string name="app_name">PROG7313_Ice_Four</string>


    <string name="count_label">Question%d</string>
    <string name="question_label">Question</string>
    <string name="btn_answer">choice</string>

    <string name="result_title">Your Quiz Result</string>
    <string name="result_score"> %d / 10</string>
    <string name="btn_try_again"> Try Again</string>

    <string name="angry_image">image here</string>

</resources>