<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/countLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_label"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="209dp"
        android:layout_height="119dp"
        android:text="@string/question_label"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188"

        />

    <Button
        android:id="@+id/answerBtn1"
        android:layout_width="273dp"
        android:layout_height="67dp"
        android:backgroundTint="#EEE3CB"
        android:onClick="checkAnswer"
        android:text="@string/btn_answer"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <Button
        android:id="@+id/answerBtn2"
        android:layout_width="273dp"
        android:layout_height="67dp"
        android:backgroundTint="#EEE3CB"
        android:onClick="checkAnswer"
        android:text="@string/btn_answer"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"

        />

    <Button
        android:id="@+id/answerBtn3"
        android:layout_width="273dp"
        android:layout_height="67dp"
        android:text="@string/btn_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607"
        android:onClick="checkAnswer"
        android:backgroundTint="#EEE3CB"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/answerBtn4"
        android:layout_width="273dp"
        android:layout_height="67dp"
        android:text="@string/btn_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721"
        android:onClick="checkAnswer"
        android:backgroundTint="#EEE3CB"
        android:textColor="@color/black"
        />


</androidx.constraintlayout.widget.ConstraintLayout>